8361700: Add comment for reference to the optimization